# canon

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONCURRENT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DYNAMIC-HANDLERS.md  LICENSE  LINT.md  PACKAGES.md  README.md  RELEASE.md  SECURITY.md  STREAMING.md  TESTPLAN.md  TYPES-ONLY.md  V1.md  WASI-HTTP-HANDLER.md  WASM.md  WEB-TARGET.md  build.rs  install.sh  justfile
.claude/: settings.json
.claude/hooks/: subtraction-pass.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-release.yml  bench.yml  bump.yml  canon-tests.yml  ci.yml  dependabot-auto-merge.yml  docs.yml  nightly.yml  promote.yml  publish-vscode-extension.yml  release.yml
cargo-oneway/: Cargo.toml  README.md
cargo-oneway/src/: main.rs
docs/: book.toml  canon.toml
docs/assets/: docs-enhance.js
docs/landing/: 404.html  index.html
docs/runner/: build.mjs  build.py
docs/src/: SUMMARY.md  canon-for-ai.md  contributing.md  guide.md  introduction.md  main.can  philosophy.md  playground.md  results.can  styles.can
docs/theme/: canon-highlight.js  custom.css  oneway-highlight.js  run.js  tabs.js
editors/: PUBLISHING.md  README.md
editors/tree-sitter-canon/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
editors/tree-sitter-oneway/: .eslintrc.json  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
editors/vscode-canon/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
editors/zed-canon/: Cargo.toml  extension.toml  extension.wasm
editors/zed-oneway/: Cargo.toml  extension.toml  extension.wasm
examples/: arithmetic.ow  clock.ow  commutative.ow  extern.ow  fetch-url.ow  fetch_url.ow  field-access.ow  filesystem.ow  hello.ow  imports.ow  json-literal.ow  list.ow  literals.ow  loop.ow  match.ow  methods.ow  now.ow  option.ow  parse-json.ow  parse_json.ow  random.ow  read-file.ow  read_file.ow  stdlib-string.ow  stdlib_string.ow  traits.ow  tree.ow  types.ow
examples/args-echo/: README.md  canon.toml
examples/clock/: canon.toml
examples/counter-web/: README.md  canon.toml
examples/dice-roll/: README.md  canon.toml
examples/exit-code/: canon.toml
examples/fetch-url/: oneway.toml
examples/fetch_url.cargo/: Cargo.toml
examples/http-server/: main  main.ow  oneway.toml
examples/http_server/: main.ow
examples/markdown-web/: canon.toml
examples/multifile/: greeter.ow  main.ow  oneway.toml
examples/notes-api/: README.md  canon.toml
examples/now/: oneway.toml
examples/random/: oneway.toml
examples/read-file/: canon.toml
examples/todo-fullstack/: README.md  line.can  seeded.can  server.can  todos.can  web.can
examples/todolist-web/: README.md  canon.toml
githooks/: pre-commit
oneway-lints/: README.md
oneway-lints/docs/: inconsistent_naming.md  inline_format_args.md  mod_after_use.md  no_builder_pattern.md  no_early_return_in_match.md  no_explicit_return.md  no_glob_imports.md  no_if_else.md  no_loop.md  no_nested_functions.md  no_panic.md  no_turbofish.md  no_unwrap.md  one_constructor_name.md  one_public_type_per_file.md  prefer_combinators.md  prefer_functional_iteration.md  raw_primitive_field.md  raw_primitive_param.md  too_many_params.md  type_derived_naming.md  unsorted_derives.md  unsorted_enum_variants.md  unsorted_impl_methods.md  unsorted_match_arms.md  unsorted_struct_fields.md
oneway-lints/src/: lib.rs  style.rs
oneway-lints/ui/: unsorted_derives.stderr  unsorted_match_arms.stderr  unsorted_struct_fields.stderr
src/: ast.rs  error.rs  formatter.rs  install.rs  lib.rs  loader.rs  main.rs  manifest.rs  registry.rs  runtime.rs  webhost.rs
src/bindgen/: emit.rs  mod.rs  naming.rs
src/checker/: auto_await.rs  dep_infer.rs  mod.rs
src/codegen/: async_analysis.rs  mod.rs  rust.rs
src/lexer/: scanner.rs  token.rs
src/lsp/: completion.rs  handlers.rs  main.rs  mod.rs  state.rs
src/parser/: mod.rs  parser.rs
std/: clock-wasm.ow  clock.ow  datetime.ow  filesystem-wasm.ow  filesystem.ow  http-client.ow  http-error.ow  http-response-body.ow  http-server-wasm.ow  http-server.ow  http-server.rs  http_client.ow  http_client.rs  io-error.ow  json.ow  json.rs  now.ow  path.ow  path.rs  port.ow  random-wasm.ow  request.ow  route-path.ow  test.ow  url-wasm.ow  url.ow  url.rs
tests/: async_test.rs  bench.rs  bindgen.rs  canon_tests.rs  checker_api.rs  checker_fixtures.rs  codegen_gaps.rs  commutative_test.rs  deps_test.rs  docs_examples_inline.rs  exit_code_test.rs  extern_return_shapes.rs  format_corpus.rs  format_enforcement_test.rs  fullstack_test.rs  fuzz_parser.rs  http_handler_test.rs  install_test.rs  issues_test.rs  lsp_completion.rs  oneway_tests.rs  parser_recovery.rs  registry_install_test.rs  registry_publish_test.rs  runtime_fixtures.rs  wasi_http_service_test.rs  web_target_test.rs  wit_component_prototype.rs  wit_component_stream_prototype.rs
tests/bench/: README.md  harness.rs
tests/canon/: arithmetic_test.can  base64_test.can  bool_test.can  case_test.can  commutative_test.can  compare_test.can  dispatch_test.can  hex_test.can  html_test.can  instant_test.can  int_test.can  json_test.can  list_test.can  map_test.can  mark_test.can  markdown_test.can  random_test.can  recursive_type_test.can  render_test.can  result_newtype_test.can  set_test.can  string_test.can  time_test.can  traits_test.can  url_test.can
tests/common/: mod.rs
tests/oneway/: arithmetic_test.ow  commutative_test.ow  dispatch_test.ow  list_test.ow  recursive_type_test.ow  string_test.ow  traits_test.ow
tests/runtime/: arithmetic.can  arithmetic.stdout  arm_payload_after_concat.can  arm_payload_after_concat.ow  arm_payload_after_concat.stdout  async_echo.can  async_echo.ow  async_slow_echo.can  async_slow_echo.ow  async_slow_echo.stdout  autodiscover_sibling.can  autodiscover_sibling.stdout  bool_chains.can  byte_to_string.can  byte_to_string.stdout  cli_args_cwd.can  extern.can  (+196 more)
(+368 files in other folders)
