[package]
name = "canon"
version = "0.3.0"
edition = "2021"
description = "The Canon programming language compiler"
default-run = "canon"

[[bin]]
name = "canon"
path = "src/main.rs"

# Faster codegen runs during development; debug info is still intact at
# opt-level 1, and iteration times drop noticeably on this compiler workload.
[profile.dev]
opt-level = 1

# Smaller, faster release binaries for the installer. Thin LTO and a single
# codegen unit trade build time for a leaner artifact.
[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
# WASM encoding and Component Model (Bytecode Alliance — pin to same minor
# version). 0.250 matches the wasmparser that wasmtime 45 bundles internally
# and adds `ComponentFuncTypeEncoder::async_()`, which is required to emit
# the WIT-level `async func` type that pairs with `CanonicalOption::Async`
# on the canon.lower for `extern Wasm.async` declarations.
wasm-encoder  = "0.250"
wit-parser    = "0.250"
wit-component = "0.250"
wasmparser    = "0.250"

# Embedded runtime. We target WASI Preview 3 + the async Component Model.
# `component-model-async` enables the async canonical ABI; `p3` exposes the
# experimental WASI 0.3 implementation in wasmtime-wasi.
wasmtime      = { version = "45", features = ["component-model", "component-model-async", "async"] }
wasmtime-wasi = { version = "45", features = ["p3"] }
tokio         = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }

# WASI HTTP P3 — drives `wasi:http/handler.handle` exports through hyper.
# We disable `default-features` to drop `default-send-request` (which pulls
# in rustls + webpki); `canon run --addr` only needs the *server* side today.
# The outbound request path can be re-enabled when we wire `wasi:http/client`
# imports for the Canon HTTP client (which is currently the
# `canon:builtins/http` bridge).
wasmtime-wasi-http = { version = "45", default-features = false, features = ["p3"] }

# hyper-side HTTP. `hyper` provides the wire protocol, `hyper-util` the
# tokio glue (`TokioIo`, server-side conn auto-detect). `http-body-util`
# gives us `BodyExt::collect()` and the `UnsyncBoxBody` adapter that
# `wasmtime-wasi-http`'s `Request::from_http` consumes. `http` + `bytes`
# are the shared types both libraries speak.
hyper         = { version = "1", default-features = false, features = ["http1", "server"] }
hyper-util    = { version = "0.1", default-features = false, features = ["tokio", "server-auto"] }
http-body-util = { version = "0.1", default-features = false }
http          = { version = "1", default-features = false }
bytes         = { version = "1", default-features = false }
# Package-registry client (Bytecode Alliance wasm-pkg-tools). Powers
# `canon install <ns>:<pkg>` — fetching WIT packages / components from
# OCI (or local/warg) registries, with the standard `wasm-pkg`
# namespace→registry config. `futures-util` is only for draining the
# client's ContentStream; it's already in the tree transitively.
wasm-pkg-client = "0.15.1"
futures-util    = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
# Tests encode throwaway WIT packages into the wasm form registries
# serve (`tests/registry_install_test.rs`). Same pins as the main
# dependencies above, so no extra compilation.
wit-component = "0.250"
wit-parser    = "0.250"
